Tue Oct 18 10:31:38 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:

	  Updated TAO multicast service ID enumerator names to match
	  new names in tao/objectid.h.

Tue Oct 18 09:34:53 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp (setup_multicast):
	* orbsvcs/orbsvcs/Naming/Naming_Server.cpp (init_new_naming):
	* orbsvcs/orbsvcs/Trader/Trading_Loader.cpp
	  (init_multicast_server):

	  Updated TAO multicast service ID enumerator names to match
	  new names in tao/objectid.h.

Tue Oct 18 09:39:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_global.cpp:
          Removed duplicate space

Tue Oct 18 08:42:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV/AVStreams_i.cpp:
        * orbsvcs/orbsvcs/AV/RTCP_Packet.cpp:
          Fixed warnings in MinGW build

Tue Oct 18 00:19:41 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/ORB_Core.cpp (init):

	  Corrected minor typo in previous commit.

Tue Oct 18 00:08:30 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/SystemException.cpp:
	* tao/SystemException.inl:

	  Moved concrete SystemException constructors out of line again.
	  The intended footprint decreases were unfortunately not seen
	  across all platforms.

	* tao/ORB.h (resolve_service):

	  Removed unnecessary return type and emulated exception
	  parameter.

	* tao/ORB.cpp (resolve_service):

	  Use snprintf() to simplify integer to-tring conversion and
	  string concatenation.  Thanks to Jiang Wei <jw dot tao at sduept
	  dot com> for providing a patch.

	  Optimized to only determine multicast port if multicast default
	  initial reference is enabled.

	  Removed unused "return_value" variable.

	  (resolve_initial_references):

	  Updated to calls to resolve_service() to reflect new signature
	  and void return type.

	* tao/ORB_Core.cpp (init):
